# KspPicGuesser

./: .gitignore  CMakeLists.txt  README.md  download_sources  main.cpp
src/: App.cpp  App.h  Game.cpp  Game.h  main.cpp
